# CloudCord

./: .gitignore  Cargo.toml  README.md
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  File.js  Modal.css  Modal.js  Upload.js
src/: errors.rs  main.rs  secrets.rs
src/web/: delete.rs  download.rs  encryption_helper.rs  file_helper.rs  filefunctions.rs  get_file.rs  mod.rs  send_message.rs  set_encrypted.rs  upload.rs
src/web/db/: upload.rs
