[package]
name = "axumstuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.5", features = ["multipart"]}
chacha20poly1305 = "0.10.1"
file-format = "0.24.0"
futures = "0.3.30"
reqwest = { version = "0.12.3", features = ["json", "socks"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"]}
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tower-http = { version = "0.5.2", features = ["cors"] }
